Using hugo's internal templates

--- a/config.yaml
+++ b/config.yaml
@@ -1,10 +1,16 @@
 baseurl: http://pksunkara.com/
 languageCode: en-us
 title: pksunkara
+googleAnalytics: UA-9209860-4
+disqusShortname: pksunkara
 params:
   gplus: "112496434648475402756"
   twitter: pksunkara
   github: pksunkara
   facebook: pksunkara
   description: My personal blog
-...
+social:
+  twitter: pksunkara
+taxonomies:
+  tag: tags
+  category: categories
