--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,8 +9,13 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Deploy
+      - name: Build
         uses: shalzz/zola-deploy-action@master
         env:
-          PAGES_BRANCH: master
-          TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+          BUILD_ONLY: true
+      - name: Deploy
+        if: ${{ success() }}
+        uses: JamesIves/github-pages-deploy-action@4.1.0
+        with:
+          branch: master
+          folder: public
