--- a/config.toml
+++ b/config.toml
@@ -4,15 +4,6 @@ base_url = "https://pksunkara.com"
 title = "pksunkara"
 description = "My personal blog"
 
-# Whether to do syntax highlighting
-# Theme can be customised by setting the `highlight_theme` variable to a theme supported by Zola
-highlight_code = true
-highlight_theme = "demain"
-
-# Whether to build a search index to be used later on by a JavaScript library
-build_search_index = false
-
-# Whether to generate a feed automatically
 generate_feed = true
 
 # TODO: RSS for each section (hide author page from main feed)
@@ -22,8 +13,11 @@ taxonomies = [
 	{ name = "series", paginate_by = 10, feed = true }, # TODO: Taxonomy weight
 ]
 
+[markdown]
+highlight_code = true
+highlight_theme = "demain"
+
 [extra]
-# Put all your custom variables here
 twitter = "pksunkara"
 github = "pksunkara"
 facebook = "pksunkara"
