Replace twitter with bluesky

--- a/config.toml
+++ b/config.toml
@@ -19,7 +19,7 @@ highlight_theme = "demain"
 [extra]
 github = "pksunkara"
 linkedin = "pksunkara"
-twitter = "pksunkara"
+bluesky = "pksunkara.com"
 facebook = "pksunkara"
 
 google_analytics = "UA-9209860-4"
