--- a/config.toml
+++ b/config.toml
@@ -35,3 +35,4 @@ description = "Let's whiteboard on how to build the best web framework. We will 
 title = "Jujutsu: Tips & Tricks"
 status = "ongoing"
 description = "A collection of tips and tricks to get the most out of Jujutsu. In this series, we will explore various features and workflows to either help you become more productive with Jujutsu or try to replicate some obscure Git workflows."
+chronological = false
